[AR-37] added login page

--- a/agreement-registration-ui/src/main/resources/i18n/messages.properties
+++ b/agreement-registration-ui/src/main/resources/i18n/messages.properties
@@ -8,4 +8,4 @@ title.companies.create=Додати компанію
 title.company=Деталі компанії
 title.company.edit=Редагувати компанію
 
-auth.login=Логін
+title.login=Логін
